// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <SearchInput /> should match normal SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    htmlId="1"
    name="test"
    type="normal"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Icon
        className=""
        color=""
        isAria={false}
        name="search_20"
      />,
      "className": "cui-search-input",
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "required": false,
      "secondaryLabel": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "className": "",
        "color": "",
        "isAria": false,
        "name": "search_20",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          className=""
          color=""
          isAria={false}
          name="search_20"
        />,
        "className": "cui-search-input",
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "required": false,
        "secondaryLabel": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "",
          "color": "",
          "isAria": false,
          "name": "search_20",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`tests for <SearchInput /> should match pill SnapShot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    htmlId="1"
    name="test"
    type="pill"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Icon
        className=""
        color=""
        isAria={false}
        name="search_16"
      />,
      "className": "cui-search-input--pill",
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "required": false,
      "secondaryLabel": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "className": "",
        "color": "",
        "isAria": false,
        "name": "search_16",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          className=""
          color=""
          isAria={false}
          name="search_16"
        />,
        "className": "cui-search-input--pill",
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "required": false,
        "secondaryLabel": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "",
          "color": "",
          "isAria": false,
          "name": "search_16",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
